fix: theme, spacing and visiblity issues

--- a/docs/src/css/custom.css
+++ b/docs/src/css/custom.css
@@ -1161,9 +1161,21 @@ span[class*="categoryLinkLabel"] {
    Since --chatbot-sidebar-open is set on document.documentElement (:root),
    we use attribute selectors instead to check for the inline style. */
 
-  /* html[style*="--chatbot-sidebar-open: 1"] #toc-column {
+  /*html[style*="--chatbot-sidebar-open: 1"] #toc-column {
     display: none;
+  }*/
+
+  #doc-item-container {
+    container-name: doc;
   }
+
+  @container doc (max-width: 984px) {
+    #toc-column {
+      display: none !important;
+    }
+  }
+
+  /*/*
 
   html[style*="--chatbot-sidebar-open: 0"] #doc-item-container {
     max-width: 100% !important;
